--- a/presentation/standalone.tex
+++ b/presentation/standalone.tex
@@ -1090,11 +1090,8 @@
 			\item \emph{\textbf{Recursively}} pass the expansion of one macro as input to another
 		\end{itemize}
 
-		These are great for being able to reuse one macro in multiple places.\pause{} As long as you have a consistent framework for calling your macros.
-	\end{frame}
-
-	\begin{frame}{Callbacks my beloved}
-
+		These are great for being able to reuse one macro in multiple places.\pause{} As long as
+		you have a consistent framework for calling your macros.
 	\end{frame}
 
 	\section{Debugging}
