Schedule was changed somewhat last-minute ):

--- a/presentation/conference.tex
+++ b/presentation/conference.tex
@@ -219,7 +219,7 @@
 	\end{frame}
 
 	\begin{frame}{(:<}
-		It's not snacktime anymore. It's crimetime.
+		It's not snacktime just yet. It's crimetime.
 
 		We're going to define traits using XML and declarative macros.
 	\end{frame}
